@@ -2,7 +2,7 @@
  * Process Hacker -
  *   memory provider
  *
- * Copyright (C) 2010 wj32
+ * Copyright (C) 2010-2015 wj32
  *
  * This file is part of Process Hacker.
  *
@@ -22,6 +22,15 @@
 
 #define PH_MEMPRV_PRIVATE
 #include <phapp.h>
+
+typedef struct _PHP_KNOWN_MEMORY_REGION
+{
+    LIST_ENTRY ListEntry;
+    PH_AVL_LINKS Links;
+    ULONG_PTR Address;
+    SIZE_T Size;
+    PPH_STRING Name;
+} PHP_KNOWN_MEMORY_REGION, *PPHP_KNOWN_MEMORY_REGION;
 
 VOID PhpMemoryItemDeleteProcedure(
     _In_ PVOID Object,
@@ -106,8 +115,7 @@ VOID PhpMemoryItemDeleteProcedure(
 {
     PPH_MEMORY_ITEM memoryItem = (PPH_MEMORY_ITEM)Object;
 
-    if (memoryItem->Name)
-        PhDereferenceObject(memoryItem->Name);
+    PhSwapReference(&memoryItem->Name, NULL);
 }
 
 VOID PhGetMemoryProtectionString(
@@ -197,15 +205,232 @@ PWSTR PhGetMemoryTypeString(
         return L"Unknown";
 }
 
+static LONG NTAPI PhpCompareKnownMemoryRegionCompareFunction(
+    _In_ PPH_AVL_LINKS Links1,
+    _In_ PPH_AVL_LINKS Links2
+    )
+{
+    PPHP_KNOWN_MEMORY_REGION knownMemoryRegion1 = CONTAINING_RECORD(Links1, PHP_KNOWN_MEMORY_REGION, Links);
+    PPHP_KNOWN_MEMORY_REGION knownMemoryRegion2 = CONTAINING_RECORD(Links2, PHP_KNOWN_MEMORY_REGION, Links);
+
+    return uintptrcmp(knownMemoryRegion1->Address, knownMemoryRegion2->Address);
+}
+
+VOID PhpAddKnownMemoryRegion(
+    _Inout_ PPH_AVL_TREE KnownMemoryRegionsSet,
+    _Inout_ PLIST_ENTRY KnownMemoryRegionsListHead,
+    _In_ ULONG_PTR Address,
+    _In_ SIZE_T Size,
+    _In_ _Assume_refs_(1) PPH_STRING Name
+    )
+{
+    PPHP_KNOWN_MEMORY_REGION knownMemoryRegion;
+
+    knownMemoryRegion = PhAllocate(sizeof(PHP_KNOWN_MEMORY_REGION));
+    knownMemoryRegion->Address = Address;
+    knownMemoryRegion->Size = Size;
+    knownMemoryRegion->Name = Name;
+
+    if (PhAddElementAvlTree(KnownMemoryRegionsSet, &knownMemoryRegion->Links))
+    {
+        // Duplicate address.
+        PhDereferenceObject(Name);
+        PhFree(knownMemoryRegion);
+        return;
+    }
+
+    InsertTailList(KnownMemoryRegionsListHead, &knownMemoryRegion->ListEntry);
+}
+
+VOID PhpCreateKnownMemoryRegions(
+    _In_ HANDLE ProcessId,
+    _In_ HANDLE ProcessHandle,
+    _Out_ PPH_AVL_TREE KnownMemoryRegionsSet,
+    _Out_ PLIST_ENTRY KnownMemoryRegionsListHead
+    )
+{
+    PVOID processes;
+    PSYSTEM_PROCESS_INFORMATION process;
+    ULONG i;
+    BOOLEAN isWow64 = FALSE;
+
+    PhInitializeAvlTree(KnownMemoryRegionsSet, PhpCompareKnownMemoryRegionCompareFunction);
+    InitializeListHead(KnownMemoryRegionsListHead);
+
+    if (!NT_SUCCESS(PhEnumProcessesEx(&processes, SystemExtendedProcessInformation)))
+        return;
+
+    process = PhFindProcessInformation(processes, ProcessId);
+
+    if (!process)
+    {
+        PhFree(processes);
+        return;
+    }
+
+    // PEB
+    {
+        PROCESS_BASIC_INFORMATION basicInfo;
+        PVOID peb32;
+
+        if (NT_SUCCESS(PhGetProcessBasicInformation(ProcessHandle, &basicInfo)))
+        {
+            PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                (ULONG_PTR)basicInfo.PebBaseAddress, PAGE_SIZE,
+                PhCreateString(L"Process PEB")
+                );
+        }
+
+        if (NT_SUCCESS(PhGetProcessPeb32(ProcessHandle, &peb32)) && peb32 != 0)
+        {
+            isWow64 = TRUE;
+            PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                (ULONG_PTR)peb32, PAGE_SIZE,
+                PhCreateString(L"Process 32-bit PEB")
+                );
+        }
+    }
+
+    // TEB, stacks
+    for (i = 0; i < process->NumberOfThreads; i++)
+    {
+        PSYSTEM_EXTENDED_THREAD_INFORMATION thread = (PSYSTEM_EXTENDED_THREAD_INFORMATION)process->Threads + i;
+
+        if (thread->TebBase)
+        {
+            NT_TIB ntTib;
+            SIZE_T bytesRead;
+
+            PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                (ULONG_PTR)thread->TebBase, PAGE_SIZE,
+                PhFormatString(L"Thread %u TEB", (ULONG)thread->ThreadInfo.ClientId.UniqueThread)
+                );
+
+            if (NT_SUCCESS(PhReadVirtualMemory(ProcessHandle, thread->TebBase, &ntTib, sizeof(NT_TIB), &bytesRead)) &&
+                bytesRead == sizeof(NT_TIB))
+            {
+                if ((ULONG_PTR)ntTib.StackLimit < (ULONG_PTR)ntTib.StackBase)
+                {
+                    PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                        (ULONG_PTR)ntTib.StackLimit, (ULONG_PTR)ntTib.StackBase - (ULONG_PTR)ntTib.StackLimit,
+                        PhFormatString(L"Thread %u Stack", (ULONG)thread->ThreadInfo.ClientId.UniqueThread)
+                        );
+                }
+
+                if (isWow64 && ntTib.ExceptionList)
+                {
+                    ULONG teb32 = (ULONG)ntTib.ExceptionList;
+                    NT_TIB32 ntTib32;
+
+                    // This is actually pointless because the 64-bit and 32-bit TEBs usually share the same memory region.
+                    PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                        teb32, PAGE_SIZE,
+                        PhFormatString(L"Thread %u 32-bit TEB", (ULONG)thread->ThreadInfo.ClientId.UniqueThread)
+                        );
+
+                    if (NT_SUCCESS(PhReadVirtualMemory(ProcessHandle, (PVOID)teb32, &ntTib32, sizeof(NT_TIB32), &bytesRead)) &&
+                        bytesRead == sizeof(NT_TIB32))
+                    {
+                        if (ntTib32.StackLimit < ntTib32.StackBase)
+                        {
+                            PhpAddKnownMemoryRegion(KnownMemoryRegionsSet, KnownMemoryRegionsListHead,
+                                ntTib32.StackLimit, ntTib32.StackBase - ntTib32.StackLimit,
+                                PhFormatString(L"Thread %u 32-bit Stack", (ULONG)thread->ThreadInfo.ClientId.UniqueThread)
+                                );
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    PhFree(processes);
+}
+
+VOID PhpFreeKnownMemoryRegions(
+    _In_ PLIST_ENTRY KnownMemoryRegionsListHead
+    )
+{
+    PLIST_ENTRY listEntry;
+    PPHP_KNOWN_MEMORY_REGION knownMemoryRegion;
+
+    listEntry = KnownMemoryRegionsListHead->Flink;
+
+    while (listEntry != KnownMemoryRegionsListHead)
+    {
+        knownMemoryRegion = CONTAINING_RECORD(listEntry, PHP_KNOWN_MEMORY_REGION, ListEntry);
+        listEntry = listEntry->Flink;
+
+        PhSwapReference(&knownMemoryRegion->Name, NULL);
+        PhFree(knownMemoryRegion);
+    }
+}
+
+PPHP_KNOWN_MEMORY_REGION PhpFindKnownMemoryRegion(
+    _In_ PPH_AVL_TREE KnownMemoryRegionsSet,
+    _In_ ULONG_PTR Address
+    )
+{
+    PHP_KNOWN_MEMORY_REGION lookupKnownMemoryRegion;
+    PPH_AVL_LINKS links;
+    PPHP_KNOWN_MEMORY_REGION knownMemoryRegion;
+    LONG result;
+
+    // Do an approximate search on the set to locate the known memory region with the largest
+    // base address that is still smaller than the given address.
+    lookupKnownMemoryRegion.Address = Address;
+    links = PhFindElementAvlTree2(KnownMemoryRegionsSet, &lookupKnownMemoryRegion.Links, &result);
+    knownMemoryRegion = NULL;
+
+    if (links)
+    {
+        if (result == 0)
+        {
+            // Exact match.
+        }
+        else if (result < 0)
+        {
+            // The base of the closest known memory region is larger than our address. Assume the
+            // preceding element (which is going to be smaller than our address) is the
+            // one we're looking for.
+
+            links = PhPredecessorElementAvlTree(links);
+        }
+        else
+        {
+            // The base of the closest known memory region is smaller than our address. Assume this
+            // is the element we're looking for.
+        }
+
+        if (links)
+        {
+            knownMemoryRegion = CONTAINING_RECORD(links, PHP_KNOWN_MEMORY_REGION, Links);
+        }
+    }
+    else
+    {
+        // No modules loaded.
+    }
+
+    if (knownMemoryRegion && Address < knownMemoryRegion->Address + knownMemoryRegion->Size)
+        return knownMemoryRegion;
+    else
+        return NULL;
+}
+
 VOID PhMemoryProviderUpdate(
     _In_ PPH_MEMORY_PROVIDER Provider
     )
 {
+    PH_AVL_TREE knownMemoryRegionsSet;
+    LIST_ENTRY knownMemoryRegionsListHead;
     PVOID baseAddress;
     MEMORY_BASIC_INFORMATION basicInfo;
 
     if (!Provider->ProcessHandle)
         return;
+
+    PhpCreateKnownMemoryRegions(Provider->ProcessId, Provider->ProcessHandle, &knownMemoryRegionsSet, &knownMemoryRegionsListHead);
 
     baseAddress = (PVOID)0;
 
@@ -237,14 +462,24 @@ VOID PhMemoryProviderUpdate(
         {
             PPH_STRING fileName;
 
-            if (NT_SUCCESS(PhGetProcessMappedFileName(
-                Provider->ProcessHandle,
-                memoryItem->BaseAddress,
-                &fileName
-                )))
+            if (NT_SUCCESS(PhGetProcessMappedFileName(Provider->ProcessHandle, memoryItem->BaseAddress, &fileName)))
             {
                 memoryItem->Name = PhGetBaseName(fileName);
                 PhDereferenceObject(fileName);
+            }
+        }
+
+        // Get a known memory region name.
+        if (!memoryItem->Name && basicInfo.BaseAddress)
+        {
+            PPHP_KNOWN_MEMORY_REGION knownMemoryRegion;
+
+            knownMemoryRegion = PhpFindKnownMemoryRegion(&knownMemoryRegionsSet, (ULONG_PTR)basicInfo.BaseAddress);
+
+            if (knownMemoryRegion)
+            {
+                PhReferenceObject(knownMemoryRegion->Name);
+                memoryItem->Name = knownMemoryRegion->Name;
             }
         }
 
@@ -256,4 +491,6 @@ VOID PhMemoryProviderUpdate(
 ContinueLoop:
         baseAddress = PTR_ADD_OFFSET(baseAddress, basicInfo.RegionSize);
     }
+
+    PhpFreeKnownMemoryRegions(&knownMemoryRegionsListHead);
 }
